package handler

import (
	"context"
	"database/sql"
	"fmt"
	"log"
	"time"

	pb "ChatIM/api/proto/user"
	"ChatIM/internal/utils"

	"github.com/google/uuid"
	"github.com/redis/go-redis/v9"
	"golang.org/x/crypto/bcrypt"
	"google.golang.org/grpc/metadata"
)

type UserHandler struct {
	pb.UnimplementedUserServiceServer
	db    *sql.DB
	redis *redis.Client
}

func NewUserHandler(db *sql.DB, redis *redis.Client) *UserHandler {
	return &UserHandler{
		db:    db,
		redis: redis,
	}
}

func (h *UserHandler) GetUserByID(ctx context.Context, req *pb.GetUserRequest) (*pb.GetUserResponse, error) {
	log.Printf("Received request for user ID: %s", req.Id)

	var username, nickname string
	err := h.db.QueryRowContext(ctx, "SELECT username, nickname FROM users WHERE id = ?", req.Id).Scan(&username, &nickname)
	if err != nil {
		if err == sql.ErrNoRows {
			return nil, fmt.Errorf("user not found")
		}
		return nil, err
	}

	return &pb.GetUserResponse{
		Id:       req.Id,
		Username: username,
		Nickname: nickname,
	}, nil
}

func (h *UserHandler) CreateUser(ctx context.Context, req *pb.CreateUserRequest) (*pb.CreateUserResponse, error) {
	log.Printf("Received request to create user with username: %s", req.Username)

	// 1. æ£€æŸ¥ç”¨æˆ·åæ˜¯å¦å·²å­˜åœ¨
	var existingID string
	err := h.db.QueryRowContext(ctx, "SELECT id FROM users WHERE username = ?", req.Username).Scan(&existingID)
	if err == nil {
		log.Printf("Username %s already exists", req.Username)
		return &pb.CreateUserResponse{
			Code:    -1,
			Message: "ç”¨æˆ·åå·²å­˜åœ¨",
		}, nil
	}
	if err != sql.ErrNoRows {
		log.Printf("Database error while checking username: %v", err)
		return nil, err
	}

	// 2. å¯¹å¯†ç è¿›è¡Œå“ˆå¸Œå¤„ç†
	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(req.Password), bcrypt.DefaultCost)
	if err != nil {
		log.Printf("Failed to hash password: %v", err)
		return nil, err
	}

	// 3. æ’å…¥æ–°ç”¨æˆ·åˆ°æ•°æ®åº“ (è¿™æ¬¡æˆ‘ä»¬å­˜å“ˆå¸Œåçš„å¯†ç )
	newUserID := uuid.New().String()
	_, err = h.db.ExecContext(ctx, "INSERT INTO users (id, username, nickname, password_hash) VALUES (?, ?, ?, ?)",
		newUserID, req.Username, req.Nickname, string(hashedPassword))
	if err != nil {
		log.Printf("Failed to insert new user: %v", err)
		return nil, err
	}

	log.Printf("Successfully created user %s with ID: %s", req.Username, newUserID)

	return &pb.CreateUserResponse{
		Code:    0,
		Message: "æ³¨å†ŒæˆåŠŸ",
		UserId:  newUserID,
	}, nil
}

// Login ç”¨æˆ·ç™»å½•
func (h *UserHandler) Login(ctx context.Context, req *pb.LoginRequest) (*pb.LoginResponse, error) {
	log.Printf("Received login request for username: %s", req.Username)

	// 1. ä»æ•°æ®åº“æŸ¥è¯¢ç”¨æˆ·
	var userID, hashedPassword string
	err := h.db.QueryRowContext(ctx, "SELECT id, password_hash FROM users WHERE username = ?", req.Username).Scan(&userID, &hashedPassword)
	if err != nil {
		if err == sql.ErrNoRows {
			return &pb.LoginResponse{Code: -1, Message: "ç”¨æˆ·åæˆ–å¯†ç é”™è¯¯"}, nil
		}
		return nil, err
	}

	// 2. æ¯”è¾ƒå¯†ç 
	err = bcrypt.CompareHashAndPassword([]byte(hashedPassword), []byte(req.Password))
	if err != nil {
		// å¯†ç ä¸åŒ¹é…
		return &pb.LoginResponse{Code: -1, Message: "ç”¨æˆ·åæˆ–å¯†ç é”™è¯¯"}, nil
	}

	// 3. å¯†ç æ­£ç¡®ï¼Œç”ŸæˆçœŸå®çš„ JWT
	tokenString, err := utils.GenerateToken(userID) // ğŸ‘ˆ è°ƒç”¨å·¥å…·åŒ…ç”Ÿæˆ Token
	if err != nil {
		log.Printf("Failed to generate token for user %s: %v", req.Username, err)
		return nil, fmt.Errorf("failed to generate token")
	}
	err = h.redis.Set(ctx, "online_status:"+userID, "1", 24*time.Hour).Err()
	if err != nil {
		// Redis å†™å…¥å¤±è´¥ä¸åº”è¯¥å½±å“ç™»å½•ï¼Œä½†åº”è¯¥è®°å½•æ—¥å¿—
		log.Printf("Warning: failed to set user online status in Redis for user %s: %v", userID, err)
	}
	log.Printf("User %s logged in successfully", req.Username)

	return &pb.LoginResponse{
		Code:    0,
		Message: "ç™»å½•æˆåŠŸ",
		Token:   tokenString, // ğŸ‘ˆ è¿”å›çœŸå®çš„ Token
	}, nil
}
func (h *UserHandler) GetCurrentUser(ctx context.Context, req *pb.GetCurrentUserRequest) (*pb.GetCurrentUserResponse, error) {
	// ğŸ‘‡ æ ¸å¿ƒæ”¹åŠ¨ï¼šä» context ä¸­è·å– Metadata
	md, ok := metadata.FromIncomingContext(ctx)
	if !ok {
		return &pb.GetCurrentUserResponse{
			Code:    -1,
			Message: "ç”¨æˆ·æœªè®¤è¯",
		}, nil
	}

	// ğŸ‘‡ ä» Metadata ä¸­è·å– user-id çš„å€¼
	userIDs := md.Get("user-id")
	if len(userIDs) == 0 {
		return &pb.GetCurrentUserResponse{
			Code:    -1,
			Message: "ç”¨æˆ·æœªè®¤è¯",
		}, nil
	}
	userID := userIDs[0] // å–ç¬¬ä¸€ä¸ªå€¼

	// ç°åœ¨æˆ‘ä»¬æœ‰äº† userIDï¼Œå¯ä»¥ç»§ç»­åç»­çš„é€»è¾‘äº†
	log.Printf("Received request to get current user info for ID: %s", userID)

	// ... (åç»­çš„æ•°æ®åº“æŸ¥è¯¢é€»è¾‘ä¿æŒä¸å˜) ...
	var username, nickname string
	err := h.db.QueryRowContext(ctx, "SELECT username, nickname FROM users WHERE id = ?", userID).Scan(&username, &nickname)
	if err != nil {
		if err == sql.ErrNoRows {
			return &pb.GetCurrentUserResponse{
				Code:    -1,
				Message: "ç”¨æˆ·ä¸å­˜åœ¨",
			}, nil
		}
		return nil, err
	}

	return &pb.GetCurrentUserResponse{
		Code:     0,
		Message:  "è·å–æˆåŠŸ",
		UserId:   userID,
		Username: username,
		Nickname: nickname,
	}, nil
}
func (h *UserHandler) CheckUserOnline(ctx context.Context, req *pb.CheckUserOnlineRequest) (*pb.CheckUserOnlineResponse, error) {
	log.Printf("Received request to check online status for user_id: %s", req.UserId)

	// ğŸ‘‡ æ ¸å¿ƒé€»è¾‘ï¼šä» Redis ä¸­æŸ¥è¯¢ key æ˜¯å¦å­˜åœ¨
	key := "online_status:" + req.UserId
	result, err := h.redis.Exists(ctx, key).Result()
	if err != nil {
		// Redis æŸ¥è¯¢å‡ºé”™
		log.Printf("Error checking user online status in Redis: %v", err)
		return &pb.CheckUserOnlineResponse{
			Code:     -1,
			Message:  "æœåŠ¡å†…éƒ¨é”™è¯¯",
			IsOnline: false,
		}, nil
	}

	// Redis çš„ Exists å‘½ä»¤ï¼šå¦‚æœ key å­˜åœ¨ï¼Œè¿”å› 1ï¼›å¦åˆ™è¿”å› 0
	isOnline := result == 1

	log.Printf("User %s is online: %t", req.UserId, isOnline)

	return &pb.CheckUserOnlineResponse{
		Code:     0,
		Message:  "æŸ¥è¯¢æˆåŠŸ",
		IsOnline: isOnline,
	}, nil
}
